# APEX

./: .editorconfig  .gitignore  Cargo.toml  Justfile  README.md  apex.rules.yaml  apex.workspace.yaml  package-lock.json  package.json  tsconfig.json
.apex/: config.yaml
.apex/lenses/: default.yaml
.github/workflows/: apex-embed.yml  release.yml  version-tag.yml
collab/: crdt.go  crdt_test.go  go.mod
crates/apex-cli/: Cargo.toml
crates/apex-core/: Cargo.toml
crates/apex-git/: Cargo.toml
crates/apex-graph/: Cargo.toml
crates/apex-layout/: Cargo.toml
crates/apex-parser/: Cargo.toml
crates/apex-plugin/: Cargo.toml
crates/apex-rules/: Cargo.toml
crates/apex-ui/: Cargo.toml
crates/apex-ui/src/: main.rs
crates/apexd/: Cargo.toml
crates/apexd/src/: lib.rs
docs/: ARCHITECTURE.md  ASSUMPTIONS.md  DEVILS_ADVOCATE.md  ITERATION_LOG.md  LOCAL_WORKFLOW.md  PLAN.md  PRIME_DIRECTIVE.md  PROGRESS.md  TODO.md  cli.md  configuration.md  diagrams.md  getting-started.md  index.md  languages.md  metrics.md  rules.md  troubleshooting.md  ui.md  vscode.md
docs/skills/: SKILL_APPLICATION_MAP.md  SKILL_SUMMARIES.md  axum.md  crdt.md  git-internals.md  github-api.md  msgpack.md  prisma-schema.md  rocksdb-basics.md  sugiyama-layout.md  sveltekit.md  svg-accessibility.md  tokio.md  tree-sitter-using.md  tree-sitter.md  tsconfig.md  vscode-extension.md  wasmtime.md
plugins/example-plugin/: plugin.toml
test-fixtures/sample-repo/: package.json
ui/: index.html  package.json  styles.css  vite.config.ts
ui/src/: main.ts  sample.ts
vscode-extension/: package.json
(+42 files in other folders)
